# doodle_game

./: CMakeLists.txt  README.md
include/: AbilityItemObject.h  ClickableObject.h  DestroyableObject.h  DigitSprites.h  DisplayableObject.h  EnemyObject.h  FPSCalculator.h  Framework.h  GameManager.h  GameObject.h  GameOverMenuManager.h  GameParameters.h  MainMenuManager.h  MenuManager.h  MovingObject.h  PhysicalObject.h  PlayerCharacterObject.h  ProjectileObject.h  SpringBootsObject.h  TileObject.h  TileOccupant.h
src/: AbilityItemObject.cpp  ClickableObject.cpp  DestroyableObject.cpp  DigitSprites.cpp  DisplayableObject.cpp  EnemyObject.cpp  FPSCalculator.cpp  Framework.cpp  GameManager.cpp  GameObject.cpp  GameOverMenuManager.cpp  GameParameters.cpp  MainMenuManager.cpp  MovingObject.cpp  PhysicalObject.cpp  PlayerCharacterObject.cpp  ProjectileObject.cpp  SpringBootsObject.cpp  TileObject.cpp  TileOccupant.cpp  game.cpp
